--- a/app/templates/admin/devices/history.html
+++ b/app/templates/admin/devices/history.html
@@ -4,12 +4,27 @@
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
     <h1 class="h2"><i class="bi bi-clock-history"></i> {{ title }}</h1>
     <div class="btn-toolbar mb-2 mb-md-0">
-        {% if device %}
-        <a href="{{ url_for('device.view_device', device_id=device.id) }}" class="btn btn-outline-secondary me-2">Volver
-            al Equipo</a>
-        {% else %}
-        <a href="{{ url_for('policy.list_policies') }}" class="btn btn-outline-secondary me-2">Volver</a>
-        {% endif %}
+        <div class="dropdown">
+            <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown">
+                <i class="bi bi-arrow-left me-1"></i> Volver
+            </button>
+            <ul class="dropdown-menu dropdown-menu-end">
+                {% if device %}
+                <li><a class="dropdown-item" href="{{ url_for('device.view_device', device_id=device.id) }}">
+                        <i class="bi bi-router me-2"></i>Ir al Equipo
+                    </a></li>
+                {% endif %}
+                <li><a class="dropdown-item" href="{{ url_for('policy.list_policies') }}">
+                        <i class="bi bi-shield-check me-2"></i>Ir a Políticas
+                    </a></li>
+                <li>
+                    <hr class="dropdown-divider">
+                </li>
+                <li><a class="dropdown-item" href="javascript:history.back()">
+                        <i class="bi bi-arrow-counterclockwise me-2"></i>Página Anterior
+                    </a></li>
+            </ul>
+        </div>
     </div>
 </div>
 
