--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IS Security Toolset 1.1.1 beta</title>
+    <title>IS Security Toolset 1.2.0</title>
 
     <!-- Apply theme IMMEDIATELY to prevent flash -->
     <script>
@@ -365,7 +365,7 @@
         <div class="container">
             <a class="navbar-brand py-0" href="/">
                 <img src="{{ url_for('static', filename='img/issec.png') }}" alt="ISSEC" height="40"> Toolset
-                1.1.1 beta
+                1.2.0
             </a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
