--- a/app/templates/admin/settings.html
+++ b/app/templates/admin/settings.html
@@ -211,7 +211,7 @@
                         </div>
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" name="products" value="log_analyzer">
-                            <label class="form-check-label">Log Analyzer</label>
+                            <label class="form-check-label">IS Analyzer</label>
                         </div>
                     </div>
                 </div>
