--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -408,6 +408,11 @@
                             <i class="bi bi-file-earmark-pdf"></i> Reportes
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('log_analytics.index') }}">
+                            <i class="bi bi-cpu"></i> IS Analyzer
+                        </a>
+                    </li>
                     {% endif %}
 
                     <!-- Company Context Info -->
